revise readme for squid